# CYWeather

./: docker-compose.yaml
.github/workflows/: deploy-front.yml  sonarqube.yml  tests.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt  weather_resource.py  weather_service.py
api/tests/: conftest.py  test_weather_resource.py
prometheus/: prometheus.yml
web/: .env  vite.config.ts
web/src/api/: api.ts
